// Vitest Snapshot v1

exports[`Header component > and when component not have config > should not render params not mapped 1`] = `
<DocumentFragment>
  <header
    class="light_header"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="menu"
          >
            <div
              class="brand-logo"
            >
              <a
                href="/hotels"
              >
                <img
                  alt=""
                  class="img-fluid lazyload"
                  src="https://www.panamericanaturismo.cl/_ns_img/logo/logoPanamericana200x70.png"
                />
              </a>
            </div>
            <nav>
              <div
                class="main-navbar"
              >
                <div
                  id="mainnav"
                >
                  <div
                    class="toggle-nav"
                  >
                    <i
                      class="fa fa-bars sidebar-bar"
                    />
                  </div>
                  <div
                    class="menu-overlay"
                  />
                  <ul
                    class="nav-menu"
                  >
                    <li
                      class="back-btn"
                    >
                      <div
                        class="mobile-back text-right"
                      >
                        <span>
                          Back
                        </span>
                        <i
                          aria-hidden="true"
                          class="fa fa-angle-right pl-2"
                        />
                      </div>
                    </li>
                    <li>
                      <a
                        aria-current="page"
                        class="nav-link menu-title active"
                        href="/"
                      >
                        Home
                      </a>
                    </li>
                    <li>
                      <a
                        class="nav-link menu-title"
                        href="/hotels"
                      >
                        Hotels
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </nav>
            <ul
              class="header-right"
            >
              <li
                class="front-setting"
              >
                <select>
                  <option
                    value="Travelaway"
                  >
                    Travelaway
                  </option>
                  <option
                    value="Panamericana"
                  >
                    Panamericana
                  </option>
                  <option
                    value="Tiemponor"
                  >
                    Tiemponor
                  </option>
                  <option
                    value="Andariego"
                  >
                    Andariego
                  </option>
                </select>
              </li>
              <li
                class="user"
              >
                <a
                  class="btn btn-block btn-secondary"
                  href="/login"
                >
                  Login
                </a>
              </li>
              <li
                class="setting"
              >
                <a
                  href="/"
                >
                  <i
                    class="fas fa-cog"
                  />
                </a>
                <ul
                  class="setting-open"
                >
                  <li
                    class="front-setting"
                  >
                    <select>
                      <option
                        value="Travelaway"
                      >
                        Travelaway
                      </option>
                      <option
                        value="Panamericana"
                      >
                        Panamericana
                      </option>
                      <option
                        value="Tiemponor"
                      >
                        Tiemponor
                      </option>
                      <option
                        value="Andariego"
                      >
                        Andariego
                      </option>
                    </select>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header component > should render correctly 1`] = `
<DocumentFragment>
  <header
    class="light_header"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="menu"
          >
            <div
              class="brand-logo"
            >
              <a
                href="/hotels"
              >
                <img
                  alt=""
                  class="img-fluid lazyload"
                  src="https://www.panamericanaturismo.cl/_ns_img/logo/logoPanamericana200x70.png"
                />
              </a>
            </div>
            <nav>
              <div
                class="main-navbar"
              >
                <div
                  id="mainnav"
                >
                  <div
                    class="toggle-nav"
                  >
                    <i
                      class="fa fa-bars sidebar-bar"
                    />
                  </div>
                  <div
                    class="menu-overlay"
                  />
                  <ul
                    class="nav-menu"
                  >
                    <li
                      class="back-btn"
                    >
                      <div
                        class="mobile-back text-right"
                      >
                        <span>
                          Back
                        </span>
                        <i
                          aria-hidden="true"
                          class="fa fa-angle-right pl-2"
                        />
                      </div>
                    </li>
                    <li>
                      <a
                        aria-current="page"
                        class="nav-link menu-title active"
                        href="/"
                      >
                        Home
                      </a>
                    </li>
                    <li>
                      <a
                        class="nav-link menu-title"
                        href="/hotels"
                      >
                        Hotels
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </nav>
            <ul
              class="header-right"
            >
              <li
                class="front-setting"
              >
                <select>
                  <option
                    value="Travelaway"
                  >
                    Travelaway
                  </option>
                  <option
                    value="Panamericana"
                  >
                    Panamericana
                  </option>
                  <option
                    value="Tiemponor"
                  >
                    Tiemponor
                  </option>
                  <option
                    value="Andariego"
                  >
                    Andariego
                  </option>
                </select>
              </li>
              <li
                class=""
              >
                <span
                  class="custom-header-item"
                >
                  Test User
                </span>
              </li>
              <li
                class="user"
              >
                <a
                  class="btn btn-block btn-secondary"
                  href="/logout"
                >
                  Logout
                </a>
              </li>
              <li
                class="setting"
              >
                <a
                  href="/"
                >
                  <i
                    class="fas fa-cog"
                  />
                </a>
                <ul
                  class="setting-open"
                >
                  <li
                    class="front-setting"
                  >
                    <select>
                      <option
                        value="Travelaway"
                      >
                        Travelaway
                      </option>
                      <option
                        value="Panamericana"
                      >
                        Panamericana
                      </option>
                      <option
                        value="Tiemponor"
                      >
                        Tiemponor
                      </option>
                      <option
                        value="Andariego"
                      >
                        Andariego
                      </option>
                    </select>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
